src/test/ui/parser/issue-63116.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-63116.rs:3:18
   |
LL | impl W <s(f;Y(;]
   |          -       ^
   |          |
   |          unclosed delimiter

error: expected list separator `,`, found `;`
  --> $DIR/issue-63116.rs:3:12
   |
LL | impl W <s(f;Y(;]
   |          - ^ help: use the expected separator: `,`
   |          |
   |          while parsing the list starting here

error: expected type, found `;`
  --> $DIR/issue-63116.rs:3:15
   |
LL | impl W <s(f;Y(;]
   |               ^ expected type

error: aborting due to 3 previous errors

